<resources>
    <string name="app_name">Evidencija korisnika (SQL)</string>
    <string name="azuriranje_korisnika">Ažuriranje korisnika</string>
    <string name="pregled_korisnika">Pregled korisnika</string>
    <string name="korisnik">Korisnik</string>
    <string name="ime">Ime</string>
    <string name="unos">Unos</string>
    <string name="izmjena">Izmjena</string>
    <string name="brisanje">Brisanje</string>
    <string name="citaj_pod">Dohvati</string>
    <string name="id">Id</string>
</resources>
